Mobile hamburger clipping bug fix

--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,8 @@ button.hamburger{
   cursor: pointer;
   box-sizing: border-box;
   justify-content: space-between;
+  background-color: lightgray;
+  padding: 1px 0px; /*FIX FOR WEIRD HAMBURGER CLIPPING BUG IN MOBILE VERSION*/
 }
 
 .button.hamburger:active{
